# scanner

./: .gitignore  CLAUDE.md  RELEASING.md  docker-compose.yml  package-lock.json  package.json  services-finance.html  tmpclaude-030f-cwd
.claude/: settings.local.json
.claude/hooks/: cleanup-temp-files.ps1  cleanup-temp-files.sh
.claude/skills/releasing/: SKILL.md
.github/workflows/: release.yml
apps/cbs/: .env.example  .gitignore  PATRICK-OPENCLAW-SOUL-SNIPPET.md  WEBSITE-CHANGES.md  generate-and-send-leads.js  package.json  screenshot-pages.js  screenshot-pages.py
apps/cbs/public/: cbs-favicon.html  cbs-linkedin-banner.html  cbs-linkedin-logo.html
apps/inboxhunter-app/: .env.example  .gitignore  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/inboxhunter-app/automation/: __init__.py  agent_orchestrator.py  browser.py  build_executable.py  config.py  form_logic.py  llm_analyzer.py  main.py  (+3 more)
apps/inboxhunter-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/inboxhunter-app/src-tauri/icons/: icon.icns
apps/inboxhunter-app/src-tauri/src/: commands.rs  db.rs  main.rs
apps/liontree-mvp/: package.json  tsconfig.tsbuildinfo
apps/scanner/: package.json
clients/LionTree/: Paramount Global-DCF(1).xlsx  Paramount Global-DCF(3).xlsx  Paramount Global-DCF(4).xlsx  Paramount Global-DCF.xlsx  liontree-mvp-notes.md  liontree-proposal.md
designs/: design1-minimal.html  design2-traditional.html  design3-cards.html  design4-dark.html  design5-pastoral.html
scripts/: version.ps1  version.sh
(+83 files in other folders)
