[package]
name = "inboxhunter-app"
version = "1.2.30"
description = "AI-powered lead generation and automation platform"
authors = ["InboxHunter Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "process-exit", "process-relaunch", "shell-sidecar", "shell-execute", "shell-open", "dialog-all", "fs-all", "path-all", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# This feature is used for production builds
custom-protocol = ["tauri/custom-protocol"]

